# swapfont

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/: ci.yml  publish.yml
.github/workflows/: ci.yml  publish.yml
docs/: cli.rst  conf.py  examples.rst  index.rst
docs/_static/: custom.css
examples/: advanced_mapping.json  simple_replace.json
src/swapfont/: cli.py  core.py  font_embedding.py  font_utils.py  glue_tool.py  handlers.py  inspector_cli.py  models.py  tracker.py  wizard.py  wizard_test.py
src/swapfont/engines/: layout_engine.py
src/swapfont/inspection/: __init__.py  analyzer.py  diagnostic.py
src/swapfont/utils/: __init__.py  pdf_resources.py
tests/: conftest.py  helpers.py
tests/cli/: test_inspector.py  test_replacer.py  test_wizard.py
tests/core/: test_models.py  test_processor.py
tests/fonts/: test_embedding.py  test_scaling.py  test_utils.py
tests/inspection/: test_analyzer.py  test_report.py
tests/integration/: test_full_pipeline.py  test_layout_engine.py  test_layout_engine_coverage.py  test_layout_engine_hypothesis.py  test_layout_engine_roundtrip.py  test_smoketests.py  test_smoketests_python.py  test_type3_issues.py  test_type3_logic.py  test_type3_output.py
tests/regressions/: test_core_regressions.py  test_coverage_random1.py  test_inline_images.py  test_issue_descriptive_ligature.py  test_issue_missing_chars.py  test_tracker_crash.py  test_type3_reset.py
tests/utils/: test_assets_gen.py  test_glue.py
